# yolov10-dangerous-object-detection

./: README.md  custom_data.yaml  pyproject.toml
notebooks/: finetuning_yolo.ipynb  training_dataset_preparation.ipynb
