[tool.poetry]
name = "dangerous-object-detection"
version = "0.1.0"
description = "YOLOv10 fine-tuning to detect sharp objects and persons (portfolio project)"
authors = ["Bryen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
pip = "^24.2"
torch = "^2.4.1"
torchvision = "^0.19.1"
opencv-python-headless = "^4.10.0.84"
ultralytics = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
